image names updated

--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@
 						<div class="project-two_block-image">
 							<img src="./images/gallery1.jpg" alt="" />
 							<div class="project-two_block-content">
-								<div class="project-two_block-designation">Business Control</div>
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Business audit for Arc interior</a></h3>
+								<!-- <div class="project-two_block-designation">Business Control</div> -->
+								<h3 class="project-two_block-heading"><a href="service-detail.html">Payroll Processing</a></h3>
 							</div>
 						</div>
 					</div>
@@ -708,8 +708,9 @@
 						<div class="project-two_block-image">
 							<img src="./images/gallery2.jpg" alt="" />
 							<div class="project-two_block-content">
-								<div class="project-two_block-designation">Business Control</div>
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Business audit for Arc interior</a></h3>
+								<!-- <div class="project-two_block-designation">Business Control</div> -->
+								<h3 class="project-two_block-heading"><a href="service-detail.html">
+									Employee Self-Service Portals</a></h3>
 							</div>
 						</div>
 					</div>
@@ -721,8 +722,8 @@
 						<div class="project-two_block-image">
 							<img src="./images/gallery3.jpg" alt="" />
 							<div class="project-two_block-content">
-								<div class="project-two_block-designation">Business Control</div>
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Business audit for Arc interior</a></h3>
+								<!-- <div class="project-two_block-designation">Business Control</div> -->
+								<h3 class="project-two_block-heading"><a href="service-detail.html">Tax Filing and Reporting</a></h3>
 							</div>
 						</div>
 					</div>
@@ -734,8 +735,8 @@
 						<div class="project-two_block-image">
 							<img src="./images/gallery4.jpg" alt="" />
 							<div class="project-two_block-content">
-								<div class="project-two_block-designation">Business Control</div>
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Business audit for Arc interior</a></h3>
+								<!-- <div class="project-two_block-designation">Business Control</div> -->
+								<h3 class="project-two_block-heading"><a href="service-detail.html">Customized Solutions</a></h3>
 							</div>
 						</div>
 					</div>
@@ -747,8 +748,8 @@
 						<div class="project-two_block-image">
 							<img src="images/gallery5.jpg" alt="" />
 							<div class="project-two_block-content">
-								<div class="project-two_block-designation">Business Control</div>
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Business audit for Arc interior</a></h3>
+								<!-- <div class="project-two_block-designation">Business Control</div> -->
+								<h3 class="project-two_block-heading"><a href="service-detail.html">Compliance Management</a></h3>
 							</div>
 						</div>
 					</div>
@@ -893,17 +894,17 @@
 									<div class="widget-content">
 										<div class="images-outer clearfix">
 										
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/1.jpg"><img src="./images/foot1.png" alt=""></a></figure>
+											<figure class="image-box"><img src="./images/foot1.png" alt=""></figure>
 											<!--Image Box-->
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/2.jpg"><img src="images/foot2.png" alt=""></a></figure>
+											<figure class="image-box"><img src="images/foot2.png" alt=""></figure>
 											<!--Image Box-->
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/3.jpg"><img src="images/foot3.png" alt=""></a></figure>
+											<figure class="image-box"><img src="images/foot3.png" alt=""></figure>
 											<!--Image Box-->
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/4.jpg"><img src="images/foot4.png" alt=""></a></figure>
+											<figure class="image-box"><img src="images/foot4.png" alt=""></figure>
 											<!--Image Box-->
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/5.jpg"><img src="images/foot5.png" alt=""></a></figure>
+											<figure class="image-box"><img src="images/foot5.png" alt=""></figure>
 											<!--Image Box-->
-											<figure class="image-box"><a class="lightbox-image" href="images/gallery/6.jpg"><img src="images/foot6.png" alt=""></a></figure>
+											<figure class="image-box"><img src="images/foot6.png" alt=""></figure>
 										</div>
 									</div>
 								</div>
