carsoul images updated with new images

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
 								<ul class="navigation clearfix">
 									<li ><a href="#">Home</a></li>
-									<li ><a href="#about">About</a></li>
+									<li ><a href="#aboutus">About</a></li>
 									<li><a href="#services">Services</a></li>
 									<li><a href="#gallary">Gallery</a></li>
 									<li><a href="#contact">Contact</a></li>
@@ -166,13 +166,13 @@
 	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img src="./images/new sliderimage1.jpg" class="d-block w-100 img-fluid" alt="...">
+			<img src="./images/Untitled (1200 x 990 px) (1220 x 600 px) (1220 x 500 px).png" class="d-block w-100 img-fluid" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img src="./images/sliderimage2.jpg" class="d-block w-100 img-fluid" alt="...">
+			<img src="./images/Untitled design.png" class="d-block w-100 img-fluid" alt="...">
 		  </div>
 		  <div class="carousel-item">
-			<img src="./images/sliderimage3.jpg" class="d-block w-100 img-fluid" alt="...">
+			<img src="./images/new Untitled design (1).png" class="d-block w-100 img-fluid" alt="...">
 		  </div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -192,9 +192,9 @@
 	<!-- End Main Slider -->
 	
 	<!-- About Three -->
-	<section class="about-three" >
-		<div class="auto-container">
-			<div class="about-three_inner-container" style="background-image:url(./images/background/pattern-15.jpg)">
+	<section class="about-three mt-3 mb-3 "  id="aboutus"	 >
+		<div class=" " >
+			<div class="about-three_inner-container" style="background-image:url(./images/background/pattern-15.jpg) "   >
 				<div class="row clearfix">
 					<!-- Title Column -->
 					<div class="title-column col-lg-6 col-md-12 col-sm-12">
