--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="auto-container">
 				<div class="inner-container d-flex justify-content-between align-items-center flex-wrap">
 					<!-- Logo Box -->
-					<div class="logo"><a href="index.html"><img src="./images/1 (1).jpg" alt="" title=""></a></div>
+					<div class="logo"><a href="index.html"><img src="./images/Surya Consult  logo.png" alt="" title=""></a></div>
 					
 					<div class="nav-outer d-flex">
 						
