logo change in mobile responsive

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="menu-backdrop"></div>
             <div class="close-btn"><span class="icon fas fa-window-close fa-fw"></span></div>
             <nav class="menu-box">
-                <div class="nav-logo"><a href="index.html"><img src="images/1 (1).jpg" alt="" title=""></a></div>
+                <div class="nav-logo"><a href="index.html"><img src="images/Surya Consult  logo.png	" alt="" title=""></a></div>
 				 
                 <div class="">
 					<!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -459,7 +459,7 @@
 							<img src="./images/gallery1.jpg" alt="" />
 							<div class="project-two_block-content">
 								<!-- <div class="project-two_block-designation">Business Control</div> -->
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Payroll Processing</a></h3>
+								<h3 class="project-two_block-heading text-light">Payroll Processing</h3>
 							</div>
 						</div>
 					</div>
@@ -472,8 +472,8 @@
 							<img src="./images/gallery2.jpg" alt="" />
 							<div class="project-two_block-content">
 								<!-- <div class="project-two_block-designation">Business Control</div> -->
-								<h3 class="project-two_block-heading"><a href="service-detail.html">
-									Employee Self-Service Portals</a></h3>
+								<h3 class="project-two_block-heading text-light"> 
+									Employee Self-Service Portals </h3>
 							</div>
 						</div>
 					</div>
@@ -486,7 +486,7 @@
 							<img src="./images/gallery3.jpg" alt="" />
 							<div class="project-two_block-content">
 								<!-- <div class="project-two_block-designation">Business Control</div> -->
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Tax Filing and Reporting</a></h3>
+								<h3 class="project-two_block-heading text-light ">Tax Filing and Reporting </h3>
 							</div>
 						</div>
 					</div>
@@ -499,7 +499,7 @@
 							<img src="./images/gallery4.jpg" alt="" />
 							<div class="project-two_block-content">
 								<!-- <div class="project-two_block-designation">Business Control</div> -->
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Customized Solutions</a></h3>
+								<h3 class="project-two_block-heading text-light  ">Customized Solutions </h3>
 							</div>
 						</div>
 					</div>
@@ -512,7 +512,7 @@
 							<img src="images/gallery5.jpg" alt="" />
 							<div class="project-two_block-content">
 								<!-- <div class="project-two_block-designation">Business Control</div> -->
-								<h3 class="project-two_block-heading"><a href="service-detail.html">Compliance Management</a></h3>
+								<h3 class="project-two_block-heading text-light  "> Compliance Management </h3>
 							</div>
 						</div>
 					</div>
